[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "venteto_django_users"
version = "0.0.5"
description = "Generic reusable custom user app for Django projects."
readme = "README.md"
requires-python = ">= 3.13"
dependencies = [
    "venteto-django-abstract>=0.0.6",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/venteto/venteto-django-users"